--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1,3 +1,4 @@
-@import "~bootstrap/scss/bootstrap";
-
-
+// @import "~bootstrap/scss/bootstrap";
+@import "partials/variables";
+@import "partials/common";
+@import "partials/header";
