FEAT: create Jumbotron Section

--- a/resources/scss/partials/_common.scss
+++ b/resources/scss/partials/_common.scss
@@ -28,3 +28,8 @@ a{
 .uppercase{
     text-transform: uppercase;
 }
+
+.jumbo{
+    background-image: url("../imgs/jumbotron.jpg");
+    padding: 210px 0;
+}
