--- a/resources/scss/partials/_header.scss
+++ b/resources/scss/partials/_header.scss
@@ -11,12 +11,12 @@ header {
             li{
 
                 &:last-child{
-                    margin-left: $spacing *2 ;
+                    margin-left: 1.5em ;
                 }
 
                 a{
                     color: white;
-                    font-size: $fontSize - 6px;
+                    font-size: 10px;
                     font-weight: 600;
                 }
             }
@@ -51,11 +51,10 @@ header {
                         display: flex;
 
                         li{
-                            padding: 0 $spacing / 2;
+                            padding: 0 0.8em;
 
                             a{
                                 color: $colorTextMenu;
-                                font-size: $fontSize;
                                 font-weight: bold;
                                 line-height: 110px;
                                 display: inline-block;
@@ -75,7 +74,7 @@ header {
                     input {
                         border: none;
                         outline: none;
-                        padding: $spacing / 2;
+                        padding: 0.8em;
                         border-bottom: 2px solid $colorPrimary;
                     }
                 }
