--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1,5 +1,6 @@
 @import "partials/variables";
 @import "partials/common";
 @import "partials/header";
+@import "partials/comics";
 @import "partials/footer";
 @import "partials/main-nav";
