FEAT: create Info-Comic page-content & ancorate to comics Index route

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -2,5 +2,6 @@
 @import "partials/common";
 @import "partials/header";
 @import "partials/comics";
+@import "partials/info-comics";
 @import "partials/footer";
 @import "partials/main-nav";
