--- a/resources/scss/partials/_common.scss
+++ b/resources/scss/partials/_common.scss
@@ -17,12 +17,25 @@ h1,h2,h3,h4,h5,h6{
     margin: 0 auto;
 }
 
+.small-container{
+    max-width: 1020px;
+    margin: 0 auto;
+}
+
+.container::after, .small-container::after {
+    clear: both;
+    content: '';
+    display: table;
+}
+
 ul{
     list-style-type: none;
 }
 
 a{
     text-decoration: none;
+    color: #fff;
+
 }
 
 .uppercase{
